# powere.ch

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.bad  Makefile.bak  README.md  flex_surface_Geschirrspueler.html  index.html  package-lock.json  package.json  project-tree.txt  pyrightconfig.json  requirements.txt  sollte
ai_guide/: server.py
infra/: docker-compose.prod.yml
python/: pyproject.toml
python/powere/data/survey/: raw
python/powere/dataloaders/: __init__.py  common.py  io.py
python/powere/dataloaders/lastprofile/: io.py  lastprofile.py
python/powere/dataloaders/survey/: __init__.py  attitudes.py  demand_response.py  demographics.py  incentives.py  io.py  nonuse.py  socioeconomics.py
python/powere/etl/: common.py
python/powere/etl/lastprofile/: precompute.py
python/powere/etl/lastprofile/jobs/: code
python/powere/etl/survey/: run_all.py
python/powere/etl/survey/jobs/: preprocess_q14_education.py
python/powere/sim/dr_windows/: README.md
python/powere/sim/flexibility_potential/: README.md
python/powere/sim/simulation/: README.md
python/tests/: test_dataloaders_smoke.py
scripts/: ai_guide_ingest.sh  powere_smoke.sh  rebuild_all.sh  rebuild_survey_processed.sh  release_lastprofile.sh  run_all_steps.sh  setup.sh  smoke_warehouse.sh  smoke_web.sh  step1.sh  step2.sh  step3.sh  step4.sh  step5.sh  step6.sh
step_1_raw_data/: README.md
step_2_preprocessing/: README.md  lastprofile  survey
step_3_processed_data/: README.md  lastprofile  survey
step_4_datenloader/: README.md  lastprofile  (+1 more)
(+410 files in other folders)
