[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powere"
version = "0.1.0"
description = "PowerE shared python library (dataloaders, pipelines, transforms)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=2.2,<2.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["powere*"]